# ogl

./: .gitmodules  CMakeLists.txt  build.sh  readme.md
cube/: plane_cube.mtl
ext/: CMakeLists.txt
ext/glad/: glad.c  glad.h
shaders/: main.frag  main.vert  shadow.frag  shadow.vert
src/: CMakeLists.txt  animation.cpp  animation.h  bone.cpp  bone.h  camera.h  common.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  node.cpp  node.h  physics.cpp  physics.h  renderstate.h  scene.cpp  scene.h  shader.cpp  shader.h  texture.cpp  texture.h  window.cpp  window.h
src/demos/: CMakeLists.txt  animation.cpp  physics.cpp
