set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)

add_subdirectory(glfw)


set( ASSIMP_BUILD_3DS_IMPORTER      ON  CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_3D_IMPORTER       OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_3MF_IMPORTER      OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_AC_IMPORTER       OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_ASE_IMPORTER      OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_ASSBIN_IMPORTER   ON  CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_ASSXML_IMPORTER   ON  CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_B3D_IMPORTER      OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_BLEND_IMPORTER    ON  CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_BVH_IMPORTER      OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_COB_IMPORTER      OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_COLLADA_IMPORTER  ON  CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_CSM_IMPORTER      OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_DXF_IMPORTER      OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_FBX_IMPORTER      ON  CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_GLTF_IMPORTER     OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_HMP_IMPORTER      OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_IFC_IMPORTER      OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_IRR_IMPORTER      ON  CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_LWO_IMPORTER      OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_LWS_IMPORTER      OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_MD2_IMPORTER      OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_MD3_IMPORTER      OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_MD5_IMPORTER      OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_MDC_IMPORTER      OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_MDL_IMPORTER      OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_MS3D_IMPORTER     OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_NDO_IMPORTER      OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_NFF_IMPORTER      OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_NONFREE_C4D_IMPOR OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_OBJ_IMPORTER      ON  CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_OFF_IMPORTER      OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_OGRE_IMPORTER     OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_OPENGEX_IMPORTER  OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_PLY_IMPORTER      ON  CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_Q3BSP_IMPORTER    OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_Q3D_IMPORTER      OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_RAW_IMPORTER      OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_SIB_IMPORTER      OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_SMD_IMPORTER      OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_STL_IMPORTER      ON  CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_TERRAGEN_IMPORTER OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_XGL_IMPORTER      OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_X_IMPORTER        OFF CACHE INTERNAL "" FORCE )

set( BUILD_SHARED_LIBS OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_STATIC_LIB ON CACHE INTERNAL "" FORCE )
# do not build exporters
set( ASSIMP_NO_EXPORT ON  CACHE INTERNAL "" FORCE )

# do not build AssImp tests and samples
set( ASSIMP_BUILD_TESTS        OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_SAMPLES      OFF CACHE INTERNAL "" FORCE )
set( ASSIMP_BUILD_ASSIMP_TOOLS OFF CACHE INTERNAL "" FORCE )

# redirect AssImp binary tools to overall binary path
set( ASSIMP_BIN_INSTALL_DIR ${CMAKE_BINARY_DIR}/bin CACHE INTERNAL "" FORCE )

add_subdirectory(assimp)


# set( BUILD_BULLET2_DEMOS     OFF CACHE INTERNAL "" FORCE )
# set( BUILD_BULLET3           OFF CACHE INTERNAL "" FORCE )
# set( BUILD_EXTRAS            OFF CACHE INTERNAL "" FORCE )
# set( BUILD_CPU_DEMOS         OFF CACHE INTERNAL "" FORCE )
# set( BUILD_OPENGL3_DEMOS     OFF CACHE INTERNAL "" FORCE )
# set( BUILD_SHARED_LIBS       OFF CACHE INTERNAL "" FORCE )
# set( BUILD_UNIT_TESTS        OFF CACHE INTERNAL "" FORCE )
# set( USE_GRAPHICAL_BENCHMARK OFF CACHE INTERNAL "" FORCE )

# add_subdirectory(bullet3 )


add_subdirectory(glm)

add_library(glad glad/glad.c)
